# teleop-glove

./: .gitignore  README.md  tool_set_config.json
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: glove_controller.1772875643298.pdom
.metadata/.plugins/org.eclipse.cdt.core/infoCache/glove_controller/: default.json
.metadata/.plugins/org.eclipse.core.resources/: 0.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/.org.eclipse.egit.core.cmp/: .location
.metadata/.plugins/org.eclipse.core.resources/.projects/glove_controller/: .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/glove_controller/.indexes/: history.index  (+1 more)
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.core/.launches/: glove_controller Debug.launch  glove_controller.launch
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
glove_controller/: .cproject  .project  README.md  sdkconfig.old
glove_controller/main/: .cproject  CMakeLists.txt  FlexSensor.cpp  FlexSensor.h  HardwareAbstraction.cpp  HardwareAbstraction.h  ICM20948.cpp  ICM20948.h  JointAngle.cpp  JointAngle.h  MQTT.h  Quaternion.cpp  Quaternion.h  REST_API.cpp  REST_API.h  communication.cpp  communication.h  config.h  fingerIK.cpp  fingerIK.h  fingerIK_doc.md  i2c_registers.h  main.cpp  wifi.cpp  wifi.h
glove_controller/main/www/: hand.js  index.html
(+3 files in other folders)
